# vibe2d

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  playthrough.yml
crates/vibe2d/: Cargo.toml
crates/vibe2d/src/: config.rs  game.rs  lib.rs  screen.rs  vdp_web.rs
crates/vibe_asset/src/: lib.rs
crates/vibe_audio/: Cargo.toml
crates/vibe_audio/src/: desktop.rs  lib.rs  web.rs
crates/vibe_debug/: Cargo.toml
crates/vibe_debug/src/: lib.rs  server.rs
crates/vibe_input/src/: lib.rs
crates/vibe_platform/: Cargo.toml
crates/vibe_platform/src/: common.rs  desktop.rs  lib.rs  web.rs
crates/vibe_render/: Cargo.toml
crates/vibe_render/src/: lib.rs  procedural.rs  renderer.rs
crates/vibe_ui/: Cargo.toml
crates/vibe_ui/src/: context.rs  state.rs
docs/: api.md  architecture.md  ui.md  vdp.md
examples/aoi-demo/: Cargo.toml
examples/aoi-demo/src/: main.rs
examples/flappy-bird/: Cargo.toml
examples/flappy-bird/src/: main.rs
examples/flappy-bird/tests/: autopilot_max_score.py  vdp_full_test.py  vdp_rpc.py
examples/mari0/: Cargo.toml  game.yaml
examples/mari0/src/: main.rs
examples/mari0/tests/: autopilot_max_score.py  vdp_full_test.py
examples/tetris/: Cargo.toml
examples/tetris/src/: main.rs
examples/tetris/tests/: autopilot_max_score.py
examples/ui/: Cargo.toml
examples/ui/src/: main.rs
skills/: vdp.md
tools/vibe-cli/: Cargo.toml
tools/vibe-cli/src/: main.rs  vdp_relay.rs
