[package]
name = "vibe2d"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI-friendly 2D game engine"

[features]
default = ["vdp"]
vdp = ["dep:vibe_debug", "dep:serde_json"]

[dependencies]
vibe_render = { workspace = true }
vibe_input = { workspace = true }
vibe_audio = { workspace = true }
vibe_asset = { workspace = true }
vibe_ui = { workspace = true }
vibe_platform = { workspace = true }
vibe_debug = { workspace = true, optional = true }
glam.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json = { workspace = true, optional = true }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
web-time.workspace = true
web-sys = { workspace = true, features = ["WebSocket", "MessageEvent", "ErrorEvent", "BinaryType", "Location"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
base64.workspace = true
