[package]
name = "vibe_render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgpu.workspace = true
glam.workspace = true
image.workspace = true
bytemuck.workspace = true
anyhow.workspace = true
tracing.workspace = true
fontdue.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { workspace = true, features = ["dx12", "metal", "vulkan-portability"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
